source/stylesheets/home.sass
@keyframes welcome-text
  0%
    opacity: 0
    transform: translate3d(0, 10%, 0)

  100%
    transform: none
    opacity: 1

@keyframes hide-welcome-text
  0%
    transform: none
    opacity: 1

  100%
    opacity: 0
    transform: translate3d(0, 10%, 0)

.welcome-image
  background: var(--header-background-color)
  color: var(--header-text-color)
  height: 100vh
  height: 100svh
  left: 0
  position: relative
  text-align: center
  top: calc(var(--header-height) * -1)
  width: 100%
  display: flex
  align-items: center
  z-index: 2
  flex-shrink: 0

  .welcome-image-bg
    transition: opacity .3s ease-in
    object-fit: cover
    position: absolute
    top: 0
    left: 0
    width: 100%
    height: 100%
    opacity: 0

  .welcome-overlay
    background: var(--header-background-color)
    bottom: 0
    height: 100%
    left: 0
    opacity: .4
    position: absolute
    right: 0
    top: 0
    width: 100%

  .welcome-text
    position: relative
    animation: welcome-text ease-in 900ms forwards
    padding: 0 20px
    max-width: 1200px
    margin: 0 auto

    &.fade_out
      animation: hide-welcome-text ease-in 200ms forwards

    .welcome-text-header
      font-family: var(--primary-font)
      font-size: 3.75em
      line-height: 1.2em
      margin-bottom: 40px

      @media screen and (max-width: $break-small)
        font-size: 9vw

    .welcome-button
      color: var(--header-text-color)
      font-size: 1.5em
      padding: 10px
      text-decoration-color: transparent
      transition: text-decoration-color .1s linear
      outline-offset: 4px

      &:hover
        text-decoration-color: var(--header-text-color)
        text-decoration: underline
        text-decoration-thickness: 2px

.welcome-image + main
  margin-top: calc(var(--header-height) * -1)

.home-tagline
  color: var(--secondary-text-color)
  font-family: var(--secondary-font)
  font-size: 1.25em
  margin: 0 auto 96px
  max-width: 680px
  text-align: center
  width: 100%

  @media screen and (max-width: $break-small)
    margin: 0 auto 60px

.home-featured-products
  margin-bottom: var(--margin-size)

a.all-products-button
  margin-top: 48px

.featured-categories

  h2
    text-align: center
    font-size: 1.5rem
    margin-bottom: 48px

  .category-list
    --columns: #{"{{ theme.max_categories_per_row }}"}

    @media screen and (max-width: $break-large)
      --columns: calc(#{"{{ theme.max_categories_per_row }}"} - 1)

    @media screen and (max-width: $break-small)
      --columns: #{"{{ theme.max_categories_per_row_mobile }}"}


    &--text 
      row-gap: 20px

